--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,30 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.country {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.country img {
+  margin-bottom: 10px;
+}
+
+.countries {
+  display: flex;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.countries img {
+  margin-right: 10px;
+}
